# TransparentLLM

./: .gitignore  Cargo.toml  Dockerfile  QA-BACKEND.md  QA-FRONTEND.md  README.md  cargo-config.toml  create_models.py  create_providers.py  deploy.ps1  docker-compose.yaml  llm.nginx.conf  update_prices.py
.github/workflows/: deploy.yml
docs/: API.md  ARCHITECTURE.md  DESIGN.md  PRD.md  qwen-pricing.md
frontend/: .env.development  .env.production  .gitignore  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/logs/: layout.tsx  page.tsx
frontend/src/app/models/: layout.tsx  page.tsx
frontend/src/app/playground/: layout.tsx  page.tsx  types.ts
frontend/src/app/providers/: layout.tsx  page.tsx
frontend/src/app/settings/: layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/charts/: area-gradient-defs.tsx  area.tsx  chart-formatters.ts
frontend/src/contexts/: AuthContext.tsx  ReactQueryProvider.tsx
frontend/src/lib/: api.ts  icons.tsx  paths.ts
frontend/src/types/: index.ts
src/: config.rs  main.rs
src/auth/: middleware.rs  mod.rs
src/crypto/: mod.rs
src/db/: mod.rs
src/logging/: mod.rs
src/models/: mod.rs
src/proxy/: mod.rs  sse.rs
src/proxy/parser/: mod.rs
src/routes/: frontend.rs  health.rs  management.rs  mod.rs  proxy.rs
src/source_tag/: mod.rs
(+16 files in other folders)
